*Empty MediaWiki Message*

--- a/კვესტორი.mw
+++ b/კვესტორი.mw
@@ -1,10 +1,11 @@
 {{რომის მთავრობა}}
 '''კვესტორი''' (''[[ლათინური ენა|ლათ]]. '''quaestor''', '''quaerere''' - გამოკითხვა, გამოძიება'')  [[რომის რესპუბლიკა|რომაული]] ერთერთი [[მაგისტრატურა]].
 
-თავდაპირველად კვესტორები [[კონსული|კონსულების]] თანაშემწეები იყვნენ. მათი არჩევა ტრიბების [[კომიცია|კომიციებში]] ხდებოდა. დროთა განმავლობაში მათი ფუნქციებში სისხლის სამართლის საქმეების გარჩევა, სახელმწიფო ხაზინის მეთვალყურეობა და სახელმწიფო არქივით განისაზღვრა.
+თავდაპირველად კვესტორები [[კონსული|კონსულების]] თანაშემწეები იყვნენ. მათი არჩევა ტრიბების [[კომიცია|კომიციებში]] ხდებოდა. კანდიდატი უნდა ყოფილიყო 30 წელზე უფროსი. დროთა განმავლობაში მათი ფუნქციებში სისხლის სამართლის საქმეების გარჩევა, სახელმწიფო ხაზინის მეთვალყურეობა და სახელმწიფო არქივით განისაზღვრა.
 
 [[ძვ. წ. 367]] წლამდე, სანამ სისხლის სამართლის საქმეების განხილვა კონსულების კომპეტენციაში შედიოდა, კვესტორები მხოლოდ საქმის წინასწარ გამოძიებას აწარმოებდნენ, ხოლო შემდეგ, როდესაც ეს მოვალეობა პრეტორებს დაეკისრათ, კვესტორების ფუნქცია ხაზინის ზედამხედველობით და არქივების მართვით შემოიფარგლა. 
 
+თავდაპირველად კვესტორები ორნი იყვნენ, ხოლო [[ძვ. წ. 421]] წლიდან ოთხნი გახდნენ, თან ამ თანამდებობის მიღება უკვე პლებსაც შეეძლოთ. [[სულა|სულას]] რეფორმის შემდეგ [[ძვ. წ. 81]] წელს კვესტორთა რაოდენობამ ოცს მიაღწია, ხოლო [[იულიუს კეისარი|კეისარის]] დროს ორმოცს. 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
