*Empty MediaWiki Message*

--- a/კვესტორი.mw
+++ b/კვესტორი.mw
@@ -13,3 +13,20 @@
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[bg:Квестор]]
+[[de:Quaestur]]
+[[en:Quaestor]]
+[[es:Cuestor]]
+[[fr:Questeur]]
+[[he:קווסטור]]
+[[hu:Quaestor]]
+[[nl:Quaestor (Rome)]]
+[[ja:クァエストル]]
+[[no:Kvestor]]
+[[pt:Questor]]
+[[ro:Chestor]]
+[[ru:Квестор]]
+[[fi:Kvestori]]
+[[sv:Quaestor]]
+[[zh:財務官]]
