*Empty MediaWiki Message*

--- a/მაგისტრატები.mw
+++ b/მაგისტრატები.mw
@@ -1,5 +1,14 @@
 {{რომის მთავრობა}}
-მაგისტრატურები (მაგისტრატუსები) [[რომის რესპუბლიკა|რომში]] არჩევითი თანამდებობა. მაგისტრატუსები უმთავრესად აღმასრულებელ ხელისუფლებას წარმოადგენდნენ. მაგისტრატუსად არჩევა დიდი პატივი იყო, მათ არანაერი ანაზღაურება არ ეკუთვნოდათ, პირიქით მოვალეობის შესასრულება ხშირად საკუთარი სახსრებით უწევდათ. მაგისტრატუსები ორ ტიპად იყოფოდა: 
+მაგისტრატურები (მაგისტრატუსები) [[რომის რესპუბლიკა|რომში]] არჩევითი თანამდებობა. მაგისტრატუსები უმთავრესად აღმასრულებელ ხელისუფლებას წარმოადგენდნენ. მაგისტრატუსად არჩევა დიდი პატივი იყო, მათ არანაერი ანაზღაურება არ ეკუთვნოდათ, პირიქით მოვალეობის შესასრულება ხშირად საკუთარი სახსრებით უწევდათ. მაგისტრატუსები ორ ტიპად იყოფოდა: ძირითადი მაგისტრატუსები - '''Magistratus ordinarii''' და საგანგებო მაგისტრატუსები - '''Magistratus extraordinarii'''.
+
+==ძირითადი მაგისტრატუსები==
+
+* [[კონსული]]
+* [[ტრიბუნი]]
+* [[კვესტორი]]
+* [[პრეტორი]]
+* [[ედილუსი]]
+* [[ცენზორი]]
 
 
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
