*Empty MediaWiki Message*

--- a/მაგისტრატები.mw
+++ b/მაგისტრატები.mw
@@ -1,5 +1,5 @@
 {{რომის მთავრობა}}
-მაგისტრატურები (მაგისტრატუსები) [[რომის რესპუბლიკა|რომში]] არჩევითი თანამდებობა. მაგისტრატუსები უმთავრესად აღმასრულებელ ხელისუფლებას წარმოადგენდნენ. მაგისტრატუსად არჩევა დიდი პატივი იყო, მათ არანაერი ანაზღაურება არ ეკუთვნოდათ, პირიქით მოვალეობის შესასრულება ხშირად საკუთარი სახსრებით უწევდათ. მაგისტრატუსები ორ ტიპად იყოფოდა: ძირითადი მაგისტრატუსები - '''Magistratus ordinarii''' და საგანგებო მაგისტრატუსები - '''Magistratus extraordinarii'''.
+მაგისტრატურები (მაგისტრატუსები) [[რომის რესპუბლიკა|რომში]] არჩევითი თანამდებობა. მაგისტრატუსები უმთავრესად აღმასრულებელ ხელისუფლებას წარმოადგენდნენ. მაგისტრატუსად არჩევა დიდი პატივი იყო, მათ არანაერი ანაზღაურება არ ეკუთვნოდათ, პირიქით მოვალეობის შესასრულება ხშირად საკუთარი სახსრებით უწევდათ. მაგისტრატუსები ორ ტიპად იყოფოდა: ძირითადი მაგისტრატუსები - '''Magistratus ordinarii''' და საგანგებო მაგისტრატუსები - '''Magistratus extraordinarii'''. ყველა მაგისტრატუსი ცენზორის და დიქტატორის გარდა თითო წლის ვადით ირჩეოდა. დიქტატორს სენტი და კონსულები 6 თვის ვადით ირჩევდნენ, ხოლო ცენზორებს 5 წლის ვადით.
 
 ==ძირითადი მაგისტრატუსები==
 
