*Empty MediaWiki Message*

--- a/მაგისტრატები.mw
+++ b/მაგისტრატები.mw
@@ -10,5 +10,11 @@
 * [[ედილუსი]]
 * [[ცენზორი]]
 
+==საგანგებო მაგისტრატუსები==
+
+* [[დიქტატორი]]
+* [[Magister Equitum]]
+* [[დეცემვირი]]
+* [[სამხედრო ტრიბუნი]]
 
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
