--- a/მაგისტრატები.mw
+++ b/მაგისტრატები.mw
@@ -18,3 +18,9 @@
 * [[სამხედრო ტრიბუნი]]
 
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[en:Magistratus]]
+[[he:%D7%9E%D7%92%D7%99%D7%A1%D7%98%D7%A8%D7%90%D7%98]]
+[[no:Magistrat (romersk)]]
+[[ro:Magistratus]]
+[[zh:長官]]
