*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -1,2 +1,2 @@
 {{რომის მთავრობა}}
-'''ლიქტორი''' (''[[ლათინური ენა|ლათ]]. '''lictor''' - ligare - შეკვრა, დაბმა'') [[რომის რესპუბლიკა|რომში ერთერთი უმდაბლესი თანამდებობა.
+'''ლიქტორი''' (''[[ლათინური ენა|ლათ]]. '''lictor''' - ligare - შეკვრა, დაბმა'') [[რომის რესპუბლიკა|რომში]] ერთერთი უმდაბლესი თანამდებობა.
