--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -15,7 +15,7 @@
 
 რომის პოლიტიკურ ცხოვრებაში კრებები (კომიციები) უწინდებურად ასრულებდნენ მნიშვნელოვან როლს, არსებობდა კრებების რამოდენიმე სახე: [[კურიების კრება]], [[ცენტურიების კრება]], [[ტრიბების კრება]], [[პლებეების კრება]] და უზენაესი ორგანო იყო [[რომის სენატი|სენატი]]. ეს კრებები შესაბამისს საკითხებს წყეტდნენ, მათში მონაწილეობა შეეძლო შესაბამისი კლასის ან გვარის სრულწლოვან მოქალაქეს. ქალებს რომში მოქალაქეობის უფლება არ ჰქონდათ. ამ კრებებში კი ყველაზე მნიშვნელოვანი ქვეყნის პოლიტიკური ცხოვრებისთვის იყო პლებეების კრება და სენატი. კურიების კრებების ძალიან მნიშვნელოვანი იყო, მასზე ხდებოდა სენატორების არჩევა და სასამართლოები.
 
-'''მაგისტრატუსები''' წარმოადგენდნენ აღმასრულებელ ხელისუფლებას, ყოველ ზემოხსენებულ კრებას თავისი მაგისტრუსები ჰყავდა. მაგისტრატუსის წოდება ძალიან საპატიოდ ითვლებოდა, მათ უანგაროთ უნდა შეესრულებინათ დაკისრებული საქმე და ხშირად ამისთვის პირადი სახსრების გამოყენება სჭირდებოდათ, მაგისტრები ხელშეუხლებელნი იყვნენ.
+'''[[მაგისტრატუსები]]''' წარმოადგენდნენ აღმასრულებელ ხელისუფლებას, ყოველ ზემოხსენებულ კრებას თავისი მაგისტრუსები ჰყავდა. მაგისტრატუსის წოდება ძალიან საპატიოდ ითვლებოდა, მათ უანგაროთ უნდა შეესრულებინათ დაკისრებული საქმე და ხშირად ამისთვის პირადი სახსრების გამოყენება სჭირდებოდათ, მაგისტრები ხელშეუხლებელნი იყვნენ.
 
 [[სურათი:SPQR.jpg|thumb|left|200px|Senatus Popolus Que Romanus]]
 
