/* რესპუბლიკის სახელმწიფო წყობა */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -19,7 +19,7 @@
 
 [[სურათი:SPQR.jpg|thumb|left|200px|Senatus Popolus Que Romanus]]
 
-რომში არჩევა თანამდებობებზე ერთი წლის ვადით ხდებოდა და მიღებული იყო ერთ თანამდებობაზე ორი პიროვნების არჩევა. მაგალითად უმაღლეს თანამდებობას [[კონსულ|კონსულობას]] ყოველთვის ორი ადამიანი იკავებდა, რომლიდანაც ერთერთს ყოველთვის შეეძლო მეორეს მოქმედებებზე ვეტოს დადება. იგივე პრინციპით ხდებოდა არმიის მართვაც. ხოლო უფრო დაბალ თანამდებობებზე ხდებოდა კიდევ უფრო მეტი ადამიანის არჩევა. 
+რომში არჩევა თანამდებობებზე ერთი წლის ვადით ხდებოდა და მიღებული იყო ერთ თანამდებობაზე ორი პიროვნების არჩევა. მაგალითად უმაღლეს თანამდებობას [[კონსული|კონსულობას]] ყოველთვის ორი ადამიანი იკავებდა, რომლიდანაც ერთერთს ყოველთვის შეეძლო მეორეს მოქმედებებზე ვეტოს დადება. იგივე პრინციპით ხდებოდა არმიის მართვაც. ხოლო უფრო დაბალ თანამდებობებზე ხდებოდა კიდევ უფრო მეტი ადამიანის არჩევა. 
 
 გამონაკლისს წარმოადგენდნენ დიქტატორები და ცენზორები. დიქტატორებს ირჩევდნენ საგანგებო საომარ მდგომარეობაში 6 თვის ვადით, რომლის დროსაც იგი ერთპიროვნულად მართავდა სახელმწიფოს. ხოლო ცენზორების არჩევა ხდებოდა 5 წელიწადში ერთხელ 18 თვის ვადით.
 
