--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -271,6 +271,7 @@
 
 ==ლიტერატურა==
 
+* [[ტიტუს ლივიუსი]] რომის ისტორია ქალაქის დაარსებიდან
 * [[პლუტარქე]]  პარალელური ბიოგრაფიები
 * [[გაიუს ტრანკვილიუს სვეტონიუსი]] 12 კეისარის ცხოვრება.
 * ლევან სანიკიძე, კეისარიადა (1989 თბილისის უნივერსიტეტის გამომცემლობა)
