*Empty MediaWiki Message*

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -1,7 +1,7 @@
 [[სურათი:RomanEmpire.png|thumb|370px|რომის იმპერია. წითელი - ძვ. წ II საუკუნე. სტაფილოსფერი - კეისარის და პომპეუსის დაბყრობების შემდეგ. ყვითელი - ოქტავიუსის დაბყრობების შემდეგ. მწვანე - ჩვ.წ. II საუკუნე.]]
 
 
-'''რომის იმპერია''' - ''([[ლათინური ენა|ლათინურად]] - Imperium Romanum)'' აღმოცენდა [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] უზენაესი ძალაუფლების ერთ პიროვნების ხელში კონცენტრაციის შედეგად. პირველ იმპერატორად [[ოქტავიუს ავგუსტუსი]] ითვლება, მაგრამ იმპერიას საფუძველი ჯერ კიდევ მისმა წინამორბედებმა ჩაუყარეს. [[რომის რესპუბლიკის წყობა]] ყოველგვარად მიმართული იყო იმისკენ რომ ცალკეული პიროვნების ხელში არ აღმოჩენილიყო ძალაუფლება, მაგრამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამ შექმნა ამისთვის საკმარისი პირობა. [[სულა|სულას]] და მარიუსს შორის დაწყებული სამოქალაქო ომის შემდეგ რომმა კიდევ არაერთი სამოქალაქო დაპირისპირება გადაიტანა. [[იულიუს კეისარი|იულიუს კეისარმა]] კი შექმნა იმპერიის შექმნის ყველა წინაპირობა. იგი გახდა პირველი ვის ხელშიც მოექცა უზენაესი ძალაუფლება, მაგრამ მას ჯერ კიდევ ჰყავდა ძლიერი ოპოზიცია - რესპუბლიკური იდეალების დამცველ სენატორებს შორის, თან საზოგადოება მორალურად ჯერ არ იყო მზად მიეღო იგი როგორც უზანაესი ძალაუფლების ერთადერთი მატარებელი. ეს კი დასრულდა ბრუტუსის და კასიუსის შეთქმულებით, რომლის შედეგადაც კეისარი სენატში მოკლეს. მიუხედავად ამისა კეისარის სახელს მიენიჭა უზენაესი ძალაუფლების მნიშვნელობა, ეს სიტყვა ამ მნიშვნელობით ბევრ ენაში შევიდა, მაგალითად [[გერმანული ენა|გერმანულად]] kaiser და [[რუსული ენა|რუსულად]] царь.
+'''რომის იმპერია''' - ''([[ლათინური ენა|ლათინურად]] - Imperium Romanum)'' აღმოცენდა [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] უზენაესი ძალაუფლების ერთ პიროვნების ხელში კონცენტრაციის შედეგად. პირველ იმპერატორად [[ოქტავიანე ავგუსტუსი]] ითვლება, მაგრამ იმპერიას საფუძველი ჯერ კიდევ მისმა წინამორბედებმა ჩაუყარეს. [[რომის რესპუბლიკის წყობა]] ყოველგვარად მიმართული იყო იმისკენ რომ ცალკეული პიროვნების ხელში არ აღმოჩენილიყო ძალაუფლება, მაგრამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამ შექმნა ამისთვის საკმარისი პირობა. [[სულა|სულას]] და მარიუსს შორის დაწყებული სამოქალაქო ომის შემდეგ რომმა კიდევ არაერთი სამოქალაქო დაპირისპირება გადაიტანა. [[იულიუს კეისარი|იულიუს კეისარმა]] კი შექმნა იმპერიის შექმნის ყველა წინაპირობა. იგი გახდა პირველი ვის ხელშიც მოექცა უზენაესი ძალაუფლება, მაგრამ მას ჯერ კიდევ ჰყავდა ძლიერი ოპოზიცია - რესპუბლიკური იდეალების დამცველ სენატორებს შორის, თან საზოგადოება მორალურად ჯერ არ იყო მზად მიეღო იგი როგორც უზანაესი ძალაუფლების ერთადერთი მატარებელი. ეს კი დასრულდა ბრუტუსის და კასიუსის შეთქმულებით, რომლის შედეგადაც კეისარი სენატში მოკლეს. მიუხედავად ამისა კეისარის სახელს მიენიჭა უზენაესი ძალაუფლების მნიშვნელობა, ეს სიტყვა ამ მნიშვნელობით ბევრ ენაში შევიდა, მაგალითად [[გერმანული ენა|გერმანულად]] kaiser და [[რუსული ენა|რუსულად]] царь.
 
 კეისარის მკვლელობის შემდეგ [[ძვ. წ. 44]] წელს, რომში სამოქალაქო დაპირისპირების ახალმა ტალღამ იფეთქა, რომლის მხოლოდ 27 წელს ოქტავიუსის ანტონიუსზე გამარჯვებით დასრულდა. ამ დროისთვის ოქტავიუსს უკვე აღარ დარჩა რესპუბლიკური ოპოზიცია, რის შედეგადაც მას იმავე წელს სენატმა მიანიჭა უზანაესი ძალაუფლება. 
 
