/* ოქტავიუს ავგუსტუსის პრინციპატი */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -10,17 +10,17 @@
 [[ძვ. წ. I]] საუკუნეში რომის იმპერია განფენილი იყო თანამედროვე [[პორტუგალია|პორტუგალიის]], [[ესპანეთი|ესპანეთის]], [[იტალია|იტალიის]], [[საბერძნეთი|საბერძნეთის]], [[მაკედონია|მაკედონიის]], [[თურქეთი|თურქეთის]], [[სირია|სირიის]], [[ისრაელი|ისრაელის]], [[ტუნისი|ტუნისის]] და ჩრდილოეთ [[ალჟირი|ალჟირის]] ტერიტორიებზე. ხოლო რომის პოლიტიკური გავლენა კიდევ უფრო მეტ ტერიტორიებზე ვრცელდებოდა. ამ დაპყრობებს კი კეისარმა მიუმატა გალია (თანამედროვე [[საფრანგეთი]]), [[პონტოს სამეფო]] ([[თურქეთი]]) და [[ბრიტანეთი]], ხოლო ოქტავიუსმა [[ეგვიპტე]]. ამგვარად რომის იმპერია ძველი წელთაღრიცხვის დასასრულს მოიცავდა მთელს ხმელთაშუა ზღვისპირეთს და დასავლეთ ევროპას. ამის გარდა რომზე დამოკიდებული იყო მთელი რიგი სახელმწიფოები, რომლის მეფეებიც "რომაელი ხალხის მეგობრის და მოკავშირის" ტიტულს ატარებდნენ. იმ დროინდელ ევროპაში, დასავლეთ აზიაში და ჩრდილოეთ აფრიკაში არ იყო ძალა რომელიც შეძლებდა რომაულ ლეგიონებთან დაპირისპირებას.
 
 
-==ოქტავიუს ავგუსტუსის პრინციპატი==
+==ოქტავიანე ავგუსტუსის პრინციპატი==
 <small>იხ. [[რომაელ იმპერატორთა სია]]</small>
 [[სურათი:Statue-Augustus.jpg|thumb|ოქტავიან ავგუსტუსი]]
 
-ოქტავიუსის იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომელსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიუსმა ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიუს ავგუსტუსი'''.
+ოქტავიანეის იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომელსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიანემ ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიან ავგუსტუსი'''.
 
-ოქტავიუსმა გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიუსი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
+ოქტავიანემ გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიანეი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
 
-ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი [[მხედართმთავარი]], მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიუსმა შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
+ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი [[მხედართმთავარი]], მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიანემ შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
 
-ოქტავიუსმა შეკვეცა ლეგიონების რაოდენობა, დარჩენილი ლეგიონერები კი განასახლა არასტაბილურ პროვინციებში. საკუთარი დაცვისთვის კი მან [[პრეტორიანელები|პრეტორიანელთა გვარდია]] შექმნა, რომელიც ელიტარულ ჯარად ითვლებოდა. თვითონ მთავარსარდალი გახდა, ამგვარად მთელი სამხედრო ძალაუფლება მის ხელთ იყო. იტალიაში პრეტორიანელების და ქალაქური კოჰორტების გარდა არანაირი სახის ჯარი არ დატოვა. მის დროს შეიქმნა სახელმწიფო კანცელარიაც. იტალიაში მან ააღორძინა საშუალო მიწათმფობელობა, სწორედ ეს კლასი და არმია იყო იმპერატორის ხელისუფლების დასაყრდნობი. ხოლო პროლეტარებისთვის ეწყობოდა უფასო პურის გაცემები.
+ოქტავიანემ შეკვეცა ლეგიონების რაოდენობა, დარჩენილი ლეგიონერები კი განასახლა არასტაბილურ პროვინციებში. საკუთარი დაცვისთვის კი მან [[პრეტორიანელები|პრეტორიანელთა გვარდია]] შექმნა, რომელიც ელიტარულ ჯარად ითვლებოდა. თვითონ მთავარსარდალი გახდა, ამგვარად მთელი სამხედრო ძალაუფლება მის ხელთ იყო. იტალიაში პრეტორიანელების და ქალაქური კოჰორტების გარდა არანაირი სახის ჯარი არ დატოვა. მის დროს შეიქმნა სახელმწიფო კანცელარიაც. იტალიაში მან ააღორძინა საშუალო მიწათმფობელობა, სწორედ ეს კლასი და არმია იყო იმპერატორის ხელისუფლების დასაყრდნობი. ხოლო პროლეტარებისთვის ეწყობოდა უფასო პურის გაცემები.
 
 [[სურათი:Ital007.jpg|thumb|left|იტალიის რეგიონები ავგუსტუსის დროს]]
 მან, როგორც მთავარმა ცენზორმა ითავა ერის ზნეობრივი მდგომარეობის ზედამხედველობა. ამ პერიოდში პატრიარქალური რომაული ზნეჩვეულებები დაკნინებული იყო. ავგუსტუსმა მთელი რიგი კანონები გამოსცა ზნეობის ასამაღლებლად, მაგრამ რომაელები ამას უკმაყოფილებით შეხვდნენ. ავგუსტუსი ასევე ცდილობდა რომაელების დემოგრაფიული მდგომარეობის გაუმჯობესებას, ამ მიზნით იგი 3 და მეტ შვილიან მამებს მრავალ წასახალისებელ პრივილეგიებს ანიჭებდა, ხოლო მის სახელმწიფო აპარატში დაუცოლშვილებელი კაცი მაღალ თანამდებობას ვერ მიიღებდა.
