/* მეორე ტრიუმვირატი - ოქტავიანი */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -201,7 +201,7 @@
 
 [[სურათი:Marcanty.JPG|thumb|მარკუს ანტონიუსი]]
 
-==მეორე ტრიუმვირატი - ოქტავიანი==
+==მეორე ტრიუმვირატი - ოქტავიანე==
 კეისარის სიკვდილის შემდეგ კონსული [[მარკუს ანტონიუსი]] გამოვიდა სენატის წინაშე და განუმარტა, რომ კეისარის ტირანად ცნობა გამოიწვევს მისი ყველა განკარგულების გაუქმებას, რაც სახელმწიფოსთვის მძიმე შედეგებს იქონიებს, ციცერონმა კი შესთავაზა სენატს კომპრომისული გადაწყვეტილა - კეისარი ტირანად არ გამოეცხადებინათ, მაგრამ არც მისი მკვლელები დაესაჯათ, მიუხედავად ამ გადაწყვეტილებისა, კასიუსს და ბრუტუსს საბერძნეთში მოუწიათ გაქცევა, რადგან რომაელებმა კეისარის დაკრძალვის შემდეგ შეთქმულთა სახლების რბევა დაიწყეს.
 
 ანტონიუსი კეისარის პრინციპებზე დაყრდნობით უფრო და უფრო მეტ ძალაუფლებას იკრეფდა, რითიც რესპუბლიკელების უკმაყოფილება გამოიწვია, ამავდროულად მას კეისარის მომხრეებიც განუდგნენ, ისინი ანტონიუსს კეისარის მკვლელებთან თანამშრომლობაში დებდნენ ბრალს. მათი ახალი ლიდერი გახდა კეისარის დის შვილიშვილი 19 წლის [[ოქტავიან ავგუსტუსი|ოქტავიანე]], რომელსაც ასევე ციცერონი აქტიურად უჭერდა მხარს.
