*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -1,2 +1,7 @@
 {{რომის მთავრობა}}
 '''ლიქტორი''' (''[[ლათინური ენა|ლათ]]. '''lictor''' - ligare - შეკვრა, დაბმა'') [[რომის რესპუბლიკა|რომში]] ერთერთი უმდაბლესი თანამდებობა.
+
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
