--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -1,5 +1,7 @@
 {{რომის მთავრობა}}
-'''ლიქტორი''' (''[[ლათინური ენა|ლათ]]. '''lictor''' - ligare - შეკვრა, დაბმა'') [[რომის რესპუბლიკა|რომში]] ერთერთი უმდაბლესი თანამდებობა.
+'''ლიქტორი''' (''[[ლათინური ენა|ლათ]]. '''lictor''' - ligare - შეკვრა, დაბმა'') [[რომის რესპუბლიკა|რომში]] ერთერთი უმდაბლესი თანამდებობა. ამ თანამდებობის წარმოშვებაზე ცნობები არ გვაქვს, პირველად ლიქტორები [[რომის სამეფო|მეფეების]] პერიოდთან არიან მოხსენებულნი.
+
+თავდაპირველად ლიქტორები [[მაგისტრუსები|მაგისტრუსების]] ბრძანებების შემსრულებელნი იყვნენ, შემდგომში კი მათ მაგისტრუსების დაცვა ევალებოდათ.
 
 
 
