*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -3,6 +3,7 @@
 
 თავდაპირველად ლიქტორები [[მაგისტრატუსები|მაგისტრატუსების]] ბრძანებების შემსრულებელნი იყვნენ, შემდგომში კი მათ მაგისტრუსების დაცვა ევალებოდათ.
 
+ლიქტორები როგორც წესი ან პლებეები ან განთავისუფლებული ხდებოდნენ. ისინი აუცილებლად რომის მოქალაქეები იყვნენ, ვინაიდან [[ტოგა|ტოგას]] ატარებდნენ. ისინი სამხედრო სამსახურიდან განთავისუფლებულნი იყვნენ, ადრეული [[რომის იმპერია|იმპერიის]] ხანაში მათ ფიქსირებული ხელფასი ჰქონდათ 600 [[რომაული ფულადი სისტემა|სერტეციუსი]] და გაერთიანებულნი იყვნენ კორპორაციაში.
 
 
 [[კატეგორია:ძველი რომი]]
