*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -5,6 +5,7 @@
 
 ლიქტორები როგორც წესი ან პლებეები ან განთავისუფლებული ხდებოდნენ. ისინი აუცილებლად რომის მოქალაქეები იყვნენ, ვინაიდან [[ტოგა|ტოგას]] ატარებდნენ. ისინი სამხედრო სამსახურიდან განთავისუფლებულნი იყვნენ, ადრეული [[რომის იმპერია|იმპერიის]] ხანაში მათ ფიქსირებული ხელფასი ჰქონდათ 600 [[რომაული ფულადი სისტემა|სერტეციუსი]] და გაერთიანებულნი იყვნენ კორპორაციაში.
 
+ლიქტორს ევალებოდა მაგისტრატუსის დაცვა და მისი ძალაუფლების სიმბოლოს - [[ფაცები|ფაცების]] ტარება, ქალაგარეთ კი ფაცებში ნაჯახები იდებოდა. [[დიქტატორი|დიქტატორის]] ლიქტორები კი ყოველთვის ატარებდნენ ნაჯახებს. ისტორიული წყაროების მიხედვით ადრეული რესპუბლიკის პერიოდში ლიქტორი მაგისტრატუსის მიერ გამონატილ განაჩენსაც ასრულებდა.
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
