*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -5,7 +5,19 @@
 
 ლიქტორები როგორც წესი ან პლებეები ან განთავისუფლებული ხდებოდნენ. ისინი აუცილებლად რომის მოქალაქეები იყვნენ, ვინაიდან [[ტოგა|ტოგას]] ატარებდნენ. ისინი სამხედრო სამსახურიდან განთავისუფლებულნი იყვნენ, ადრეული [[რომის იმპერია|იმპერიის]] ხანაში მათ ფიქსირებული ხელფასი ჰქონდათ 600 [[რომაული ფულადი სისტემა|სერტეციუსი]] და გაერთიანებულნი იყვნენ კორპორაციაში.
 
-ლიქტორს ევალებოდა მაგისტრატუსის დაცვა და მისი ძალაუფლების სიმბოლოს - [[ფაცები|ფაცების]] ტარება, ქალაგარეთ კი ფაცებში ნაჯახები იდებოდა. [[დიქტატორი|დიქტატორის]] ლიქტორები კი ყოველთვის ატარებდნენ ნაჯახებს. ისტორიული წყაროების მიხედვით ადრეული რესპუბლიკის პერიოდში ლიქტორი მაგისტრატუსის მიერ გამონატილ განაჩენსაც ასრულებდა.
+ლიქტორს ევალებოდა მაგისტრატუსის დაცვა და მისი ძალაუფლების სიმბოლოს - [[ფაცები|ფაცების]] ტარება, ქალაგარეთ კი ფაცებში ნაჯახები იდებოდა. [[დიქტატორი|დიქტატორის]] ლიქტორები კი ყოველთვის ატარებდნენ ნაჯახებს. ისინი მაგისტრატუსს ყოველთვის თან დაყვებოდნენ. ისტორიული წყაროების მიხედვით ადრეული რესპუბლიკის პერიოდში ლიქტორი მაგისტრატუსის მიერ გამონატილ განაჩენსაც ასრულებდა.
+
+[[ვერსტა|ვესტას]] ქურუმებსაც ახლდათ თითო ლიქტორი, როდესაც ისინი საჯარო ღონისძიებებში იღებდნენ მონაწილეობას. მაგისტრუსების ლიქტორების რაოდენობა მკაცრად ლიმიტირებული იყო, რაც უფრო მეტი ლიქტორი ახლდა მაგისტრუსს, მით უფრო მაღალი რანგი ეკავა მას.
+
+* [[დიქტატორი]] - 24 ლიქტორი
+* [[კონსული]] - 12 ლიქტორი
+* [[პროკონსული]] - 11 ლიქტორი
+* [[Magister Equitum]] - 6 ლიქტორი
+* [[პრეტორი]] - 5 ლიქტორი
+* [[პროპრეტორი]] - 4 ლიქტორი
+* პატრიციუსი [[ედილუსი]] - 2 ლიქტორი
+
+
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
