*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -17,6 +17,7 @@
 * [[პროპრეტორი]] - 4 ლიქტორი
 * პატრიციუსი [[ედილუსი]] - 2 ლიქტორი
 
+ამათ გარდა კიდევ იყვნენ სხვა ტიპის ლიქტორები - '''lictor curiatus''', ესენი ემსახურებოდნენ [[დიდი პონტიფიკუსი|დიდ პონტიფიკუსს]] და ვესტას ქურუმებს. იმპერატორის ოჯახის წევს ქალებს ქალაქში გასვლისას ასევე ახლდნენ ამ ტიპის ლიქტორები.
 
 
 [[კატეგორია:ძველი რომი]]
