*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -22,3 +22,19 @@
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[bg:Ликтор]]
+[[de:Liktor]]
+[[en:Lictor]]
+[[es:Lictor]]
+[[fr:Licteur]]
+[[it:Lictor]]
+[[he:ליקטור]]
+[[la:Lictor]]
+[[hu:Lictor]]
+[[nl:Lictor]]
+[[pl:Liktor]]
+[[ru:Ликтор]]
+[[fi:Liktori]]
+[[sv:Liktor]]
+[[zh:刀斧手]]
