*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -1,4 +1,5 @@
 {{რომის მთავრობა}}
+[[სურათი:Lictor.jpg|thumb|left|ლიქტორი ფასცებით]]
 '''ლიქტორი''' (''[[ლათინური ენა|ლათ]]. '''lictor''' - ligare - შეკვრა, დაბმა'') [[რომის რესპუბლიკა|რომში]] ერთერთი უმდაბლესი თანამდებობა. ამ თანამდებობის წარმოშვებაზე ცნობები არ გვაქვს, პირველად ლიქტორები [[რომის სამეფო|მეფეების]] პერიოდთან არიან მოხსენებულნი.
 
 თავდაპირველად ლიქტორები [[მაგისტრატუსები|მაგისტრატუსების]] ბრძანებების შემსრულებელნი იყვნენ, შემდგომში კი მათ მაგისტრუსების დაცვა ევალებოდათ.
