*Empty MediaWiki Message*

--- a/პრინციპატი.mw
+++ b/პრინციპატი.mw
@@ -2,3 +2,7 @@
 სიტყვა პრინციპატი [[ლათინური ენა|ლათინური]] Princeps-დან მომდინარეობა, რაც "პირველი პირველთა შორის" ნიშნავს.
 
 პრინციპატი წარმოადგენდა ადრეული [[რომის იმპერია|იმპერიის]] მართვის ფორმას, როდესაც [[რომის რესპუბლიკა|რესპუბლიკური]] ტრადიციები ჯერ კიდევ ძლიერი იყო და ინსტიტუტები შენარჩუნებული იყო.
+
+პრინცეპსტის (პირველი მოქალაქის) ტიტული პირველად [[ოქტავიან ავგუსტუსი|ოქტავიან ავგუსტუსმა]] აიღო, როდესაც [[რომის სენატი|სენატის]] თანხმობით იგი იმპერატორი გახდა ([[ძვ. წ. 27]]) წელს. გარეგნულად და ფორმალურად რესპუბლიკა შენარჩუნებული იყო. ავგუსტუსმა მიიღო ცხოვრების ბოლომდე ტრიბუნის მაგისტრატურა, იგი ასევე იყო ცენზზორიც და მხედართმთავარიც. სენატმა და [[კომიცია|სახალხო კრებებმა]] განაგრძეს არსებობა, [[მაგისტრატუსები|მაგისტრატუსებიც]] შენარჩუნდა, მაგრამ მათი პოლიტიკური მნიშვნელობა შემცირდა.
+
+პირობითად პრინციპატი მოიცავს პერიოდს [[ძვ. წ. 27]] წლიდან, ანუ ავგუსტუსის იმპერატორად გამოცხადებიდან, [[193]] წლამდე, ანუ ანტონინ
