/* ოქტავიანე ავგუსტუსის პრინციპატი */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -16,7 +16,7 @@
 
 ოქტავიანეის იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომელსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიანემ ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიან ავგუსტუსი'''.
 
-ოქტავიანემ გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიანეი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
+ოქტავიანემ გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიანეი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც [[პრინციპატი]] ეწოდა და გასტანა III საუკუნემდე.
 
 ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი [[მხედართმთავარი]], მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიანემ შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
 
