*Empty MediaWiki Message*

--- a/პრინციპატი.mw
+++ b/პრინციპატი.mw
@@ -5,4 +5,20 @@
 
 პრინცეპსტის (პირველი მოქალაქის) ტიტული პირველად [[ოქტავიან ავგუსტუსი|ოქტავიან ავგუსტუსმა]] აიღო, როდესაც [[რომის სენატი|სენატის]] თანხმობით იგი იმპერატორი გახდა ([[ძვ. წ. 27]]) წელს. გარეგნულად და ფორმალურად რესპუბლიკა შენარჩუნებული იყო. ავგუსტუსმა მიიღო ცხოვრების ბოლომდე ტრიბუნის მაგისტრატურა, იგი ასევე იყო ცენზზორიც და მხედართმთავარიც. სენატმა და [[კომიცია|სახალხო კრებებმა]] განაგრძეს არსებობა, [[მაგისტრატუსები|მაგისტრატუსებიც]] შენარჩუნდა, მაგრამ მათი პოლიტიკური მნიშვნელობა შემცირდა.
 
-პირობითად პრინციპატი მოიცავს პერიოდს [[ძვ. წ. 27]] წლიდან, ანუ ავგუსტუსის იმპერატორად გამოცხადებიდან, [[193]] წლამდე, ანუ ანტონინ
+პირობითად პრინციპატი მოიცავს პერიოდს [[ძვ. წ. 27]] წლიდან, ანუ ავგუსტუსის იმპერატორად გამოცხადებიდან, [[193]] წლამდე, ანუ [[ანტონინების დინასტია|ანტონინების დინასტიის]] დასასრულამდე. [[სევერუსების დინასტია|სევერუსების დინასტიის]] მმართველობა რესპუბლიკური ტრადიციებისგან უკვე ძალიან შორის იყო წასული, ხოლო შემდეგ მესამე საუკუნის კრიზისი დაიწყო, რომელიც [[დიოკლექტიანე|დიოკლექტიანეს]] მიერ [[დომინანტი|დომინანტის შემოღებით დასრულდა.
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[cs:Principát]]
+[[de:Prinzipat]]
+[[en:Principate]]
+[[fr:Principat]]
+[[nl:Principaat]]
+[[no:Principatet]]
+[[pt:Principado romano]]
+[[ro:Principate]]
+[[ru:Принципат]]
+[[sv:Principatet]]
+[[zh:元首制]]
