--- a/პრინციპატი.mw
+++ b/პრინციპატი.mw
@@ -7,7 +7,8 @@
 
 პირობითად პრინციპატი მოიცავს პერიოდს [[ძვ. წ. 27]] წლიდან, ანუ ავგუსტუსის იმპერატორად გამოცხადებიდან, [[193]] წლამდე, ანუ [[ანტონინების დინასტია|ანტონინების დინასტიის]] დასასრულამდე. [[სევერუსების დინასტია|სევერუსების დინასტიის]] მმართველობა რესპუბლიკური ტრადიციებისგან უკვე ძალიან შორის იყო წასული, ხოლო შემდეგ მესამე საუკუნის კრიზისი დაიწყო, რომელიც [[დიოკლექტიანე|დიოკლექტიანეს]] მიერ [[დომინანტი|დომინანტის]] შემოღებით დასრულდა.
 
-{{ისტორია-დაუსრულებელი}}
+
+{{ისტორია-დასამუშავებელი}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
