*Empty MediaWiki Message*

--- a/რომანოზ_IV_დიოგენე.mw
+++ b/რომანოზ_IV_დიოგენე.mw
@@ -1,4 +1,4 @@
-რომანოზ IV დიოგენე (* ???, † [[1071]]) – [[ბიზანტიის იმპერია|ბიზანტიის]] იმპერატორი [[1068]]-[[1071]] წლებში.
+'''რომანოზ IV დიოგენე''' (* ???, † [[1071]]) – [[ბიზანტიის იმპერია|ბიზანტიის]] იმპერატორი [[1068]]-[[1071]] წლებში.
 
 
 ==ბიოგრაფია==
