*Empty MediaWiki Message*

--- a/საქართველოს_სახელმწიფო_გერბი.mw
+++ b/საქართველოს_სახელმწიფო_გერბი.mw
@@ -36,6 +36,7 @@
  
 [[de:Wappen Georgiens]]
 [[en:Coat of Arms of Georgia (country)]]
+[[es:Escudo de Georgia]]
 [[et:Gruusia vapp]]
 
 [[კატეგორია:საქართველო]]
