*Empty MediaWiki Message*

--- a/საქართველოს_სახელმწიფო_დროშა.mw
+++ b/საქართველოს_სახელმწიფო_დროშა.mw
@@ -13,6 +13,7 @@
 [[bg:Национално знаме на Грузия]]
 [[de:Flagge Georgiens]]
 [[en:Flag of Georgia (country)]]
+[[es:Bandera de Georgia]]
 [[et:Gruusia lipp]]
 [[fi:Georgian lippu]]
 [[fr:Drapeau de la Géorgie]]
