--- a/იუსტინიანე_II_(ბიზანტია).mw
+++ b/იუსტინიანე_II_(ბიზანტია).mw
@@ -10,3 +10,22 @@
 
 ==იხილე აგრეთვე==
 * [[ბიზანტიის იმპერატორთა სია]]
+
+
+
+
+[[cs:Justinián II.]]
+[[de:Justinian II.]]
+[[en:Justinian II]]
+[[es:Justiniano II]]
+[[et:Justinianus II]]
+[[eu:Justinianus II]]
+[[fi:Justinianus II]]
+[[fr:Justinien II]]
+[[he:יוסטיניאנוס השני]]
+[[hu:II. Justinianus bizánci császár]]
+[[it:Giustiniano II di Bisanzio]]
+[[ja:ユスティニアノス2世]]
+[[nl:Justinianus II van Byzantium]]
+[[pl:Justynian II Rhinotmetos]]
+[[zh:查士丁尼二世]]
