--- a/რომანოზ_IV_დიოგენე.mw
+++ b/რომანოზ_IV_დიოგენე.mw
@@ -9,3 +9,17 @@
 
 ==იხილე აგრეთვე==
 * [[ბიზანტიის იმპერატორთა სია]]
+
+
+[[cs:Roman IV. Diogenes]]
+[[de:Romanos IV.]]
+[[el:Ρωμανός Δ' Διογένης]]
+[[en:Romanus IV]]
+[[es:Romano IV Diógenes]]
+[[fr:Romain IV]]
+[[he:רומאנוס הרביעי]]
+[[hu:IV. Romanosz]]
+[[it:Romano IV di Bisanzio]]
+[[ja:ロマノス4世ディオゲネス]]
+[[nl:Romanus IV van Byzantium]]
+[[pl:Roman IV Diogenes]]
