--- a/ნიკიფორე_III_ბოტანიატე.mw
+++ b/ნიკიფორე_III_ბოტანიატე.mw
@@ -10,3 +10,12 @@
 
 ==იხილე აგრეთვე==
 * [[ბიზანტიის იმპერატორთა სია]]
+
+[[de:Nikephoros III.]]
+[[en:Nicephorus III]]
+[[es:Nicéforo III]]
+[[fi:Nikeforos III]]
+[[fr:Nicéphore III Botaniatès]]
+[[hu:III. Nikephórosz]]
+[[ja:ニケフォロス3世ボタネイアテス]]
+[[pl:Nicefor III Botaniates]]
