--- a/თეოდოსიოს_III_(ბიზანტია).mw
+++ b/თეოდოსიოს_III_(ბიზანტია).mw
@@ -5,3 +5,18 @@
 
 ==იხილე აგრეთვე==
 * [[ბიზანტიის იმპერატორთა სია]]
+
+
+
+[[cs:Theodosios III.]]
+[[de:Theodosios III.]]
+[[en:Theodosius III]]
+[[es:Teodosio III]]
+[[fi:Theodosius III]]
+[[fr:Théodose III]]
+[[hu:III. Theodosius]]
+[[it:Teodosio III di Bisanzio]]
+[[ja:テオドシオス3世]]
+[[pl:Teodozjusz III (cesarz bizantyjski)]]
+[[ru:Феодосий III]]
+[[sv:Theodosius III]]
