--- a/ანასტასიოს_II_(ბიზანტია).mw
+++ b/ანასტასიოს_II_(ბიზანტია).mw
@@ -7,3 +7,16 @@
 
 ==იხილე აგრეთვე==
 * [[ბიზანტიის იმპერატორთა სია]]
+
+
+[[cs:Anastasios II.]]
+[[de:Anastasios II.]]
+[[en:Anastasius II (emperor)]]
+[[es:Anastasio II (emperador)]]
+[[fi:Anastasius II]]
+[[fr:Anastase II (empereur byzantin)]]
+[[hu:II. Anastasius bizánci császár]]
+[[it:Anastasio II di Bisanzio]]
+[[ja:アナスタシオス2世]]
+[[pl:Anastazjusz II (cesarz bizantyjski)]]
+[[zh:安纳斯塔西亚二世]]
