*Empty MediaWiki Message*

--- a/პრინციპატი.mw
+++ b/პრინციპატი.mw
@@ -3,11 +3,11 @@
 
 პრინციპატი წარმოადგენდა ადრეული [[რომის იმპერია|იმპერიის]] მართვის ფორმას, როდესაც [[რომის რესპუბლიკა|რესპუბლიკური]] ტრადიციები ჯერ კიდევ ძლიერი იყო და ინსტიტუტები შენარჩუნებული იყო.
 
-პრინცეპსტის (პირველი მოქალაქის) ტიტული პირველად [[ოქტავიან ავგუსტუსი|ოქტავიან ავგუსტუსმა]] აიღო, როდესაც [[რომის სენატი|სენატის]] თანხმობით იგი იმპერატორი გახდა ([[ძვ. წ. 27]]) წელს. გარეგნულად და ფორმალურად რესპუბლიკა შენარჩუნებული იყო. ავგუსტუსმა მიიღო ცხოვრების ბოლომდე ტრიბუნის მაგისტრატურა, იგი ასევე იყო ცენზზორიც და მხედართმთავარიც. სენატმა და [[კომიცია|სახალხო კრებებმა]] განაგრძეს არსებობა, [[მაგისტრატუსები|მაგისტრატუსებიც]] შენარჩუნდა, მაგრამ მათი პოლიტიკური მნიშვნელობა შემცირდა.
+პრინცეპსტის (პირველი მოქალაქის) ტიტული პირველად [[ოქტავიან ავგუსტუსი|ოქტავიან ავგუსტუსმა]] აიღო, როდესაც [[რომის სენატი|სენატის]] თანხმობით იგი იმპერატორი გახდა ([[ძვ. წ. 27]]) წელს. ფორმალურად რესპუბლიკა შენარჩუნებული იყო. ავგუსტუსმა მიიღო ცხოვრების ბოლომდე ტრიბუნის მაგისტრატურა, იგი ასევე იყო ცენზორიც და მხედართმთავარიც, ამრიგად იგი სათავეში ჩაუდგა როგორც სამოქალაქო, ასევე სამხედრო და სასულიერო ხელისუფებას. სენატმა და [[კომიცია|სახალხო კრებებმა]] განაგრძეს არსებობა, [[მაგისტრატუსები|მაგისტრატუსებიც]] შენარჩუნდა, მაგრამ მათი პოლიტიკური მნიშვნელობა შემცირდა.
 
 პირობითად პრინციპატი მოიცავს პერიოდს [[ძვ. წ. 27]] წლიდან, ანუ ავგუსტუსის იმპერატორად გამოცხადებიდან, [[193]] წლამდე, ანუ [[ანტონინების დინასტია|ანტონინების დინასტიის]] დასასრულამდე. [[სევერუსების დინასტია|სევერუსების დინასტიის]] მმართველობა რესპუბლიკური ტრადიციებისგან უკვე ძალიან შორის იყო წასული, ხოლო შემდეგ მესამე საუკუნის კრიზისი დაიწყო, რომელიც [[დიოკლექტიანე|დიოკლექტიანეს]] მიერ [[დომინანტი|დომინანტის]] შემოღებით დასრულდა.
 
-
+{{სტილი}}
 {{ისტორია-დასამუშავებელი}}
 
 [[კატეგორია:ძველი რომი]]
