--- a/პრინციპატი.mw
+++ b/პრინციპატი.mw
@@ -1,4 +1,6 @@
 {{რომის მთავრობა}}
+'''პრინციპატი''' - მმართველობის ფორმა ადრეულ [[რომის იმპერია|რომის იმპერიაში]].
+
 სიტყვა პრინციპატი [[ლათინური ენა|ლათინური]] Princeps-დან მომდინარეობა, რაც "პირველი პირველთა შორის" ნიშნავს.
 
 პრინციპატი წარმოადგენდა ადრეული [[რომის იმპერია|იმპერიის]] მართვის ფორმას, როდესაც [[რომის რესპუბლიკა|რესპუბლიკური]] ტრადიციები ჯერ კიდევ ძლიერი იყო და ინსტიტუტები შენარჩუნებული იყო.
