*Empty MediaWiki Message*

--- a/დომინატი.mw
+++ b/დომინატი.mw
@@ -1,2 +1,4 @@
 {{რომის მთავრობა}}
 '''დომინანტი''' - მმართ ველობის ფორმა გვიანდელ [[რომის იმპერია|რომის იმპერიაში]].
+
+სიტყვა დომინანტი მომდინარეობს [[ლათინური ენა|ლათინური]] dominus-დან რაც ბატონს ნიშნავს. დომინანტის ჩამოყალიბება უკავშირდება იმპერატორ [[დიოკლექტიანე|დიოკლექტიანეს]] ([[284]]-[[305]]). დომინანტი [[პრინციპატი|პრინციპატისგან]] განსხვავებით აფსოლუტურ მონარქიას წარმოადგენდა. იმპერატორი უკვე აღარ ეყრდნობოდა სენატს და სხვა რესპუბლიკურ ინსტიტუტებს.
