*Empty MediaWiki Message*

--- a/დომინატი.mw
+++ b/დომინატი.mw
@@ -2,3 +2,9 @@
 '''დომინანტი''' - მმართ ველობის ფორმა გვიანდელ [[რომის იმპერია|რომის იმპერიაში]].
 
 სიტყვა დომინანტი მომდინარეობს [[ლათინური ენა|ლათინური]] dominus-დან რაც ბატონს ნიშნავს. დომინანტის ჩამოყალიბება უკავშირდება იმპერატორ [[დიოკლექტიანე|დიოკლექტიანეს]] ([[284]]-[[305]]). დომინანტი [[პრინციპატი|პრინციპატისგან]] განსხვავებით აფსოლუტურ მონარქიას წარმოადგენდა. იმპერატორი უკვე აღარ ეყრდნობოდა სენატს და სხვა რესპუბლიკურ ინსტიტუტებს.
+
+რომის იმპერიის ისტორია პირობითად იყოფა პრინციპატზე, [[მესამე საუკუნის კრიზისი|მესამე საუკუნის კრიზისზე]] და დომინანტზე. დომინანტი მოიცავს პერიოდს [[III საუკუნე|III საუკუნის]] მიწურულიდან დასავლეთ რომის იმპერიის დაცემამდე.
+
+მმართველობის ეს ფორა გადაიღეს [[ბიზანტია|ბიზანტიაშიც]].
+
+''ასევე იხილეთ [[პრინციპატი]]''
