*Empty MediaWiki Message*

--- a/დომინატი.mw
+++ b/დომინატი.mw
@@ -8,3 +8,7 @@
 მმართველობის ეს ფორა გადაიღეს [[ბიზანტია|ბიზანტიაშიც]].
 
 ''ასევე იხილეთ [[პრინციპატი]]''
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
