*Empty MediaWiki Message*

--- a/დომინატი.mw
+++ b/დომინატი.mw
@@ -9,6 +9,19 @@
 
 ''ასევე იხილეთ [[პრინციპატი]]''
 
+{{ისტორია-დასამუშავებელი}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+[[de:Dominat]]
+[[en:Dominate]]
+[[eu:Dominatua]]
+[[fr:Dominat]]
+[[nl:Dominaat]]
+[[no:Dominatet]]
+[[pl:Dominat]]
+[[pt:Dominato]]
+[[ro:Dominate]]
+[[ru:Доминат]]
+[[sv:Dominatet]]
