--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -250,7 +250,7 @@
 
 [[276]] წელს იმპერატორად [[პრობუსი]] აღიარეს. იგი წარმატებით გაუმკლავდა ფრანკების და ალემანების ახალ შემოტევას. შემდეგ განდევნა ეგვიპტიდან მომთაბარეები. [[282]] წელს იგი აჯანყებულმა ლეგიონერებმა მოკლეს.
 
-==დომინანტი==
+==[[დომინანტი]]==
 
 [[სურათი:Diocletian.jpg|thumb|დიოკლექტიანე]]
 ===დიოკლექტიანე და ტეტრარქატი===
