--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -253,11 +253,11 @@
 ==[[დომინანტი]]==
 
 [[სურათი:Diocletian.jpg|thumb|დიოკლექტიანე]]
-===დიოკლექტიანე და ტეტრარქატი===
+===[[დიოკლექტიანე]] და [[ტეტრარქატი]]===
 
 როგორც ავღნიშნეთ მესამე საუკუნის მიწურულს ქალაქების მნიშვნელობა მკვეთრად შემცირდა და დაიწყო მათი დაცარიელება. ეს უფრო მკვეთრად დასავლეთ პროვინციებში გამოიხატა. სამაგიეროდ დიდმა ლატიფუნდიებმა მოიმატეს. ლატიფუნდიებზე მონების და თავისუფალი [[კოლონები|კოლონების]] მდგომარეობა პრაქტიკულად ერთნაერი იყო. პრინციპატის დასაყრდნობი სოციალური ფენა პრაქტიკულად გაქრა. მონათმფლობელურ წყობას ფეოდალური წყობა ჩაენაცვლა.
 
-[[284]] წელს არმიან იმპერატორად გაიუს ვალერიუს ავრელიუს [[დიოკლექციანე]] აღიარეს. ან დროისთვის გალიაში დიდი აჯანყება იყო. აჯანყებულებმა იმპერატორებიც აირჩიეს. მძიმე სიტუაციით ბრიტანეთში რომის ფლოტის უფროსმაც [[კარაუზიუსი|კარაუზიუსმა]] ისარგებმა, [[287]] წელს მან თავი იმპერატორად გამოაცხადა. ამის გარდა მავრიტანიაში აჯანყდნენ ბერბერები. ფრანკები და ალემანები ისევ იმუქრებოდნენ შემოჭრით. რეინის საზღვარზე იმპერატორმა გაგზავნა მხედართმთავარი [[მაქსიმიანუსი]], რომელიც [[286]] წელს ავგუსტუსად და თავის თანამმართველად გამოაცხადა. მაქსიმიანუსს უნდა დასავლეთ პროვინციები ემართა, ხოლო დიოკლექტიანეს აღმოსავლეთი.
+[[284]] წელს არმიან იმპერატორად გაიუს ვალერიუს ავრელიუს დიოკლექციანე აღიარეს. ან დროისთვის გალიაში დიდი აჯანყება იყო. აჯანყებულებმა იმპერატორებიც აირჩიეს. მძიმე სიტუაციით ბრიტანეთში რომის ფლოტის უფროსმაც [[კარაუზიუსი|კარაუზიუსმა]] ისარგებმა, [[287]] წელს მან თავი იმპერატორად გამოაცხადა. ამის გარდა მავრიტანიაში აჯანყდნენ ბერბერები. ფრანკები და ალემანები ისევ იმუქრებოდნენ შემოჭრით. რეინის საზღვარზე იმპერატორმა გაგზავნა მხედართმთავარი [[მაქსიმიანუსი]], რომელიც [[286]] წელს ავგუსტუსად და თავის თანამმართველად გამოაცხადა. მაქსიმიანუსს უნდა დასავლეთ პროვინციები ემართა, ხოლო დიოკლექტიანეს აღმოსავლეთი.
 
 [[სურათი:Tetrarchs.jpg|thumb|left|ტეტრარქები]]
 მაქსიმიანუსს გალიაში აჯანყების ჩახშობა ძალიან გაუჭირდა. ჩახშობის შემდეგ კი გალიის უამრავი სოფელი დაცარიელდა და გაპარტახდა. ასევე დიდი მსხვერპლით მან ჩაახშო აჯანყება აფრიკაში. ამით არისტოკრატია ძალიან კმაყოფილი დარჩა. 
