/* [[დიოკლექტიანე]] და [[ტეტრარქატი]] */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -268,7 +268,7 @@
 
 რეფორმა ადმინისტრაციულ სისტემაშიც ჩატარდა. იმპერია გაიყო ოთხ რეგიონად, ყოველ რეგიონს საკუთარი მმართველი ჰყავდა. დიოკლექტიანემ დამხმარედ და თანამმართველად აირჩია მხედართმთავარი [[გაიუს გალერიუსი]] და კეისრის წიდება მიანიჭა. იმპერიის აღმოსავლეთ ნაწილიდან გალერიუსს სამართავად ბალკანეთის ნახევარკუნძული მიეცა. ამავდროულად მაქსიმიანუსმა თანამმართველად და კეისარად აირჩია ფლავიუს კონსტანციუს ქლოროსი. იგი გახდა ბრიტანეთის, გალიის და ესპანეთის მმართველი. დიოკლექტიანეს და მაქსიმიანუსს ჰქონდათ ავგუსტუსების ტიტულები. დიოკლექტიანემ აზიის პროვინციები დაიტოვა, ხოლო მაქსიმინუსს ერგო იტალია და აფრიკა.
 
-ძველი პროვინციები უფრო მცირე ერთეულებად დაიყო, ასევე იტალიაც. 10-12 პროვინცია ერთიანდებოდა დიოცეზებად, რომლებსაც ვიკარიუსები ხელმძღვანელობდნენ. ეს რეფორმა მიმართული იყო პროვინციის თავდაცვის უნარის ასამაღლებლად. გალერიუსი და ქლორუსი ავგუსტუსების ქალიშვილებზე დაქორწინდნენ და მათი შვილობილები გახდნენ. დიოკლექტიანეს და მაქსიმინუსის მმართველობის დაწყებიდან 20 წლის შემდეგ მათ უარი უნდა ეთქვათ იმპერატორიბაზე და იმპერატორებად კეისრები გამოეცხადებინათ, რომლებსაც უნდა აერჩიათ ახალი კეისრები მხედართმთავრებისგან. მმართველობის ეს სისტემა [[ტეტრარქატი|ტეტრარქატის]] (ოთხთა მმართველობის) სახელით შევიდა ისტორიაში. ეს იყო აბსოლუტიზმის და სამხედრო ადმინისტრაციული მმართველობის შერწყმა. მმართველობის ამ ფორმამ ცენტრალური ხელისუფლების გამაგრება გამოიწვია.
+ძველი პროვინციები უფრო მცირე ერთეულებად დაიყო, ასევე იტალიაც. 10-12 პროვინცია ერთიანდებოდა დიოცეზებად, რომლებსაც ვიკარიუსები ხელმძღვანელობდნენ. ეს რეფორმა მიმართული იყო პროვინციის თავდაცვის უნარის ასამაღლებლად. გალერიუსი და ქლორუსი ავგუსტუსების ქალიშვილებზე დაქორწინდნენ და მათი შვილობილები გახდნენ. დიოკლექტიანეს და მაქსიმინუსის მმართველობის დაწყებიდან 20 წლის შემდეგ მათ უარი უნდა ეთქვათ იმპერატორიბაზე და იმპერატორებად კეისრები გამოეცხადებინათ, რომლებსაც უნდა აერჩიათ ახალი კეისრები მხედართმთავრებისგან. მმართველობის ეს სისტემა ტეტრარქატის (ოთხთა მმართველობის) სახელით შევიდა ისტორიაში. ეს იყო აბსოლუტიზმის და სამხედრო ადმინისტრაციული მმართველობის შერწყმა. მმართველობის ამ ფორმამ ცენტრალური ხელისუფლების გამაგრება გამოიწვია.
 
 [[სურათი:Tetrarch system.PNG|thumb|იმპერიის გაყოფა ტეტრარქებს შორის]]
 ამ რეფორმებმა გაამართლა. პატარა პროვინციების მართვა უფრო ადვილი იყო, სეპარატისტული მოძრაობები ჩანასახშივე იხსობოდა. რომი პრაკტიკულად აღარ იყო დედაქალაქი, სენატმაც დაკარგა უწიდნებური მნიშვნელობა, იგი პრაკტიკულად ქალაქის საბჭოთ გადაიქცა. 
