*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -1,6 +1,6 @@
 {{რომის მთავრობა}}
 
-
+'''პრეტორი''' ძველ [[რომის რესპუბლიკა|რომში]] ერთერთი [[მაგისტრატუსები|მაგისტრატურა]]
 
 {{ესკიზი}}
 {{ისტორია-დასამუშავებელი}}
