*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -1,8 +1,8 @@
 {{რომის მთავრობა}}
 
-'''პრეტორი''' ძველ [[რომის რესპუბლიკა|რომში]] ერთერთი [[მაგისტრატუსები|მაგისტრატურა]]
+'''პრეტორი''' ძველ [[რომის რესპუბლიკა|რომში]] ერთერთი [[მაგისტრატუსები|მაგისტრატურა]]. პრეტორი '''praetor''' [[ლათინური ენა|ლათინურად]] მომდინარეობს სიტყვა '''prae-ire'''-დან რაც წინ მავალს ნიშნავს.
 
-{{ესკიზი}}
+
 {{ისტორია-დასამუშავებელი}}
 
 
