*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -2,6 +2,7 @@
 
 '''პრეტორი''' ძველ [[რომის რესპუბლიკა|რომში]] ერთერთი [[მაგისტრატუსები|მაგისტრატურა]]. პრეტორი '''praetor''' [[ლათინური ენა|ლათინურად]] მომდინარეობს სიტყვა '''prae-ire'''-დან რაც წინ მავალს ნიშნავს.
 
+დროთა განმავლობაში პრეტორთა დანიშნულება იცვლებოდა, თავდაპირველად პრეტორებს უწოდებდნენ უმაღლეს მაგისტრატუსებს - [[კონსული|კონსულებს]] და [[დიქტატორი|დიქტატორებს]].
 
 {{ისტორია-დასამუშავებელი}}
 
