*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -4,6 +4,8 @@
 
 დროთა განმავლობაში პრეტორთა დანიშნულება იცვლებოდა, თავდაპირველად პრეტორებს უწოდებდნენ უმაღლეს მაგისტრატუსებს - [[კონსული|კონსულებს]] და [[დიქტატორი|დიქტატორებს]].
 
+[[ძვ. წ. 367]] წლიდან კი პრეტორი დაერქვა კონსულზე ქვემოთ მდგომ მაგისტრატუსს. ამ დროიდან პრეტორის ფუნქცია განისაზღვრა სასამართლოებში საქმეების გარჩევით, ხოლო კონსულის ქალაქში არ ყოფნის დროს, პრეტორს ეკუთვნოდა უმაღლესი ხელისუფლება.
+
 {{ისტორია-დასამუშავებელი}}
 
 
