*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -6,6 +6,10 @@
 
 [[ძვ. წ. 367]] წლიდან კი პრეტორი დაერქვა კონსულზე ქვემოთ მდგომ მაგისტრატუსს. ამ დროიდან პრეტორის ფუნქცია განისაზღვრა სასამართლოებში საქმეების გარჩევით, ხოლო კონსულის ქალაქში არ ყოფნის დროს, პრეტორს ეკუთვნოდა უმაღლესი ხელისუფლება.
 
+თავდაპრველად პრეტორი შეიძლებოდა გამხდარიყო მხოლოდ პატრიციუსი, მას ისევე როგორც კონსულს [[კომიცია|ცენტურიების კომიციაზე]] ირჩევდნენ. [[ძვ. წ. 337]] წლიდან კი ეს თანამდებობა პლებეებისთვისაც გახდა ხელმისაწვდომი.
+
+
+
 {{ისტორია-დასამუშავებელი}}
 
 
