*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -8,6 +8,7 @@
 
 თავდაპრველად პრეტორი შეიძლებოდა გამხდარიყო მხოლოდ პატრიციუსი, მას ისევე როგორც კონსულს [[კომიცია|ცენტურიების კომიციაზე]] ირჩევდნენ. [[ძვ. წ. 337]] წლიდან კი ეს თანამდებობა პლებეებისთვისაც გახდა ხელმისაწვდომი.
 
+[[ძვ. წ. 246]] წლიდან მეორე პრეტორის არჩევაც დაიწყო. პირველ პრეტორს ერქვა '''Praetor urbanus''' - ქალაქის პრეტორი და იგი არჩევდა საქმეებს რომლებიც მხოლოდ რომის მოქალაქეებს ეხებოდათ, მეორე პრეტორი კი '''Praetor peregrinus''' იხილავდა საქმეებს რომლებიც რომის მოქალაქეებსა და უცხოელებს, ან მხოლოდ უცხოელებს ეხებოდათ.
 
 
 {{ისტორია-დასამუშავებელი}}
